// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HRDPane renders correctly 1`] = `
<div>
  <header />
  <UsernamePane
    i18n={
      Object {
        "group": [Function],
        "html": [Function],
        "initI18n": [Function],
        "str": [Function],
      }
    }
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder="username"
    strictValidation={false}
    usernameStyle="username"
    validateFormat={false}
  />
  <PasswordPane
    i18n={
      Object {
        "group": [Function],
        "html": [Function],
        "initI18n": [Function],
        "str": [Function],
      }
    }
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder="password"
  />
</div>
`;

exports[`HRDPane renders the captcha if required 1`] = `
<div>
  <header />
  <UsernamePane
    i18n={
      Object {
        "group": [Function],
        "html": [Function],
        "initI18n": [Function],
        "str": [Function],
      }
    }
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder="username"
    strictValidation={false}
    usernameStyle="username"
    validateFormat={false}
  />
  <PasswordPane
    i18n={
      Object {
        "group": [Function],
        "html": [Function],
        "initI18n": [Function],
        "str": [Function],
      }
    }
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    placeholder="password"
  />
  <CaptchaPane
    error={false}
    i18n={
      Object {
        "group": [Function],
        "html": [Function],
        "initI18n": [Function],
        "str": [Function],
      }
    }
    lock={
      Immutable.Map {
        "id": "__lock-id__",
      }
    }
    onReload={[Function]}
  />
</div>
`;
